<resources>
    <string name="app_name">PerfectTheft</string>
    <string name="ResNameImg1">DescriptionImg1</string>
    <string name="ResNameBtn1">DescriptionBtn1</string>
    <string name="ResNameImgDlr">DescriptionImgDlr</string>
    <string name="ResNamePlayBtn1">PLAY</string>
    <string name="ResNameImgTape">DescriptionImgTape</string>
    <string name="ResNameImgTape2">Please, enter the Name</string>
    <string name="ResNameTxtName">Player</string>
    <string name="ResNameBtnOK">OK</string>
    <string name="ResNameLogo">DescriptionImgLogo</string>
    <string name="ResNameGameActBckg">DescriptionGameActBckg</string>
    <string name="ResNameHelloTxt">"Welcome to The Perfect Theft. You have opportunity to steel money from the russian mafia handler. First of all you can pick up some useful stuff in the next step of game. Then timer starts. You'll see tables with situation and possible variantes for answer. All action will have the consiquences like the loud level, left evidance and progress. All you need is react to the situation"</string>
    <string name="ResNameBtnNext">Next</string>
    <string name="ResNameBtnAdd"><![CDATA[>>]]></string>
    <string name="ResNameImgGloves">contentImgGloves</string>
    <string name="ResName">Points</string>
    <string name="ResNameImgWeapon">contentImgWeapon</string>
    <string name="ResNameBtnGloves">+</string>
    <string name="ResNameBtnWeapon">+</string>
    <string name="ResNameBtnKey">+</string>
    <string name="ResNameBtnKnife">+</string>
    <string name="ResNameBtnDNA">+</string>
    <string name="ResNameBtnBurger">+</string>
    <string name="ResNameGloves">The Gloves</string>
    <string name="ResNamePriceGloves">250</string>
    <string name="ResNameDescriptionGloves">Helps you do not leave the evidance....Helps you do not leave the evidance</string>
    <string name="ResNameWeapon">The Weapon</string>
    <string name="ResNamePriceWeapon">500</string>
    <string name="ResNameDescriptionWeapon">You must know how this works</string>
    <string name="ResNameKey">The Master Key</string>
    <string name="ResNamePriceKey">100</string>
    <string name="ResNameDescriptionKey">Opens the doors</string>
    <string name="ResNameKnife">The Knife</string>
    <string name="ResNamePriceKnife">300</string>
    <string name="ResNameDescriptionKnife">Just the useful thing</string>
    <string name="ResNameDNA">The False DNA</string>
    <string name="ResNamePriceDNA">900</string>
    <string name="ResNameDescriptionDNA">You can substitude the other people. Like your enemy or the people with an alibi</string>
    <string name="ResNameBurger">The Burger</string>
    <string name="ResNamePriceBurger">90</string>
    <string name="ResNameDescriptionBurger">Be carefull. Not vegetarian one.</string>
    <string name="ResNameLoudTxt">Loud: </string>
    <string name="ResNameLoudLvl">0</string>
    <string name="ResNameEvidTxt">Evidence: </string>
    <string name="ResNameEvidLvl">0</string>
    <string name="ResNameTimer">00:00</string>
    <string name="ReNameBtnPause">| |</string>
    <string name="ResNameSituationTxt">There\'s a text situation description</string>
    <string name="ResNameWallSituation">ImgSituationDesc</string>
    <string name="ResNameBtnSit1">Button</string>
    <string name="ResNameBtnSit2">Button</string>
    <string name="ResNameBtnSit3">Button</string>
    <string name="ResNameBtnSit4">Button</string>
    <string name="ResNameBtnResume">RESUME</string>
    <string name="ResNameImgPause">DescriptionPauseImg</string>
    <string name="ResNameTxtSpace">sp</string>>/>
</resources>
