<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageViewWallpaper"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ResNameWallSituation" />

    <GridLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:background="#cc000000"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textViewTimer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ResNameEvidTxt"
            android:id="@+id/textViewEvid"
            android:textColor="#ffffff"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ResNameTxtSpace"
            android:id="@+id/textViewSpace"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#00ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ResNameEvidLvl"
            android:id="@+id/textViewEvidLvl"
            android:textColor="#ffffff"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ResNameLoudTxt"
            android:id="@+id/textViewLoud"
            android:textColor="#ffffff"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ResNameLoudLvl"
            android:id="@+id/textViewLoudLvl"
            android:layout_column="2"
            android:textColor="#ffffff"
            android:layout_row="2" />

    </GridLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReNameBtnPause"
        android:id="@+id/buttonPause"
        android:textColor="#ffffff"
        android:background="#cc000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textViewTimer"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ResNameTimer"
        android:id="@+id/textViewTimer"
        android:background="#cc000000"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:layout_gravity="right"
        android:layout_toLeftOf="@+id/buttonPause"
        android:layout_toStartOf="@+id/buttonPause"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textViewSituationText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ResNameSituationTxt"
        android:id="@+id/textViewSituationText"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:background="#af000000"
        android:textSize="30sp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/textViewSituationText"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSit1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ResNameBtnSit1"
                android:background="#ae000000"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/buttonSit2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ResNameBtnSit2"
                android:background="#ae000000"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSit3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ResNameBtnSit3"
                android:background="#ae000000"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/buttonSit4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ResNameBtnSit4"
                android:background="#ae000000"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageViewPause"
        android:layout_alignTop="@+id/imageViewWallpaper"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ResNameImgPause"
        android:background="#b4ffffff"
        android:visibility="invisible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResNameBtnResume"
        android:id="@+id/buttonResume"
        android:background="#cb000000"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="40sp"
        android:visibility="invisible"
        android:layout_below="@+id/textViewSituationText"
        android:layout_alignRight="@+id/buttonPause"
        android:layout_alignEnd="@+id/buttonPause" />

</RelativeLayout>